[gd_scene load_steps=5 format=3 uid="uid://ddyomssbamjd0"]

[ext_resource type="Script" uid="uid://dn7fakmeblec6" path="res://addons/godot_core_system/examples/trigger_demo/trigger_demo.gd" id="1_lejic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxxxx"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyyyy"]
size = Vector2(200, 200)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_zzzzz"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TriggerDemo" type="Node2D"]
script = ExtResource("1_lejic")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(100, 300)
collision_layer = 2

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.2, 0.6, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_xxxxx")

[node name="TriggerArea" type="Area2D" parent="."]
position = Vector2(500, 300)
collision_mask = 2

[node name="ColorRect" type="ColorRect" parent="TriggerArea"]
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
color = Color(1, 0.5, 0.2, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource("RectangleShape2D_yyyyy")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxFlat_zzzzz")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TriggerButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Trigger Button"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 220.0
offset_bottom = 166.0
text = "Status: Ready"

[connection signal="body_entered" from="TriggerArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/TriggerButton" to="." method="_on_button_pressed"]
